# neonatox-stopwatch

./: README.md  meson.build
data/: neonatox-stopwatch.desktop
src/: main.c
